Big commit of Enum classes

--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -189,8 +189,16 @@
     <Compile Include="Codecs\Compressing\GrowableByteArrayDataOutput.cs" />
     <Compile Include="Codecs\DocValuesConsumer.cs" />
     <Compile Include="Codecs\DocValuesFormat.cs" />
+    <Compile Include="Codecs\DocValuesProducer.cs" />
     <Compile Include="Codecs\FieldInfosFormat.cs" />
+    <Compile Include="Codecs\FieldInfosReader.cs" />
+    <Compile Include="Codecs\FieldInfosWriter.cs" />
+    <Compile Include="Codecs\FieldsConsumer.cs" />
+    <Compile Include="Codecs\FieldsProducer.cs" />
+    <Compile Include="Codecs\FilterCodec.cs" />
     <Compile Include="Codecs\LiveDocsFormat.cs" />
+    <Compile Include="Codecs\MappingMultiDocsAndPositionsEnum.cs" />
+    <Compile Include="Codecs\MappingMultiDocsEnum.cs" />
     <Compile Include="Codecs\NormsFormat.cs" />
     <Compile Include="Codecs\PostingsFormat.cs" />
     <Compile Include="Codecs\SegmentInfoFormat.cs" />
@@ -233,6 +241,7 @@
     <Compile Include="Index\AtomicReaderContext.cs" />
     <Compile Include="Index\AutomatonTermsEnum.cs" />
     <Compile Include="Index\BinaryDocValues.cs" />
+    <Compile Include="Index\BitsSlice.cs" />
     <Compile Include="Index\BufferedDeletes.cs" />
     <Compile Include="Index\ByteSliceReader.cs" />
     <Compile Include="Index\ByteSliceWriter.cs" />
@@ -294,14 +303,19 @@
     <Compile Include="Index\MergePolicy.cs" />
     <Compile Include="Index\MergeScheduler.cs" />
     <Compile Include="Index\MergeState.cs" />
+    <Compile Include="Index\MultiBits.cs" />
+    <Compile Include="Index\MultiDocsAndPositionsEnum.cs" />
+    <Compile Include="Index\MultiDocsEnum.cs" />
     <Compile Include="Index\MultiDocValues.cs" />
     <Compile Include="Index\MultiReader.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Index\MultiTermsEnum.cs" />
     <Compile Include="Index\NumericDocValues.cs" />
     <Compile Include="Index\OrdTermState.cs" />
     <Compile Include="Index\ReaderManager.cs" />
     <Compile Include="Index\ReadersAndLiveDocs.cs" />
+    <Compile Include="Index\ReaderSlice.cs" />
     <Compile Include="Index\SegmentInfo.cs">
       <SubType>Code</SubType>
     </Compile>
