Port: PerField codec classes

--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -204,6 +204,8 @@
     <Compile Include="Codecs\MultiLevelSkipListReader.cs" />
     <Compile Include="Codecs\MultiLevelSkipListWriter.cs" />
     <Compile Include="Codecs\NormsFormat.cs" />
+    <Compile Include="Codecs\PerField\PerFieldDocValuesFormat.cs" />
+    <Compile Include="Codecs\PerField\PerFieldPostingsFormat.cs" />
     <Compile Include="Codecs\PostingsBaseFormat.cs" />
     <Compile Include="Codecs\PostingsConsumer.cs" />
     <Compile Include="Codecs\PostingsFormat.cs" />
@@ -930,7 +932,6 @@
     <Folder Include="Codecs\Lucene40\" />
     <Folder Include="Codecs\Lucene41\" />
     <Folder Include="Codecs\Lucene42\" />
-    <Folder Include="Codecs\PerField\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
