--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -467,6 +467,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Search\MultiTermQueryWrapperFilter.cs" />
+    <Compile Include="Search\NGramPhraseQuery.cs" />
+    <Compile Include="Search\NRTManager.cs" />
     <Compile Include="Search\NumericRangeFilter.cs" />
     <Compile Include="Search\NumericRangeQuery.cs" />
     <Compile Include="Search\Payloads\AveragePayloadFunction.cs" />
@@ -740,6 +742,7 @@
     </Compile>
     <Compile Include="Support\StringTokenizer.cs" />
     <Compile Include="Support\ThreadFactory.cs" />
+    <Compile Include="Support\TimeUnit.cs" />
     <Compile Include="Util\Automaton\Automaton.cs" />
     <Compile Include="Util\Automaton\BasicAutomata.cs" />
     <Compile Include="Util\Automaton\BasicOperations.cs" />
