--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -357,6 +357,8 @@
     <Compile Include="Index\NoDeletionPolicy.cs" />
     <Compile Include="Index\NoMergePolicy.cs" />
     <Compile Include="Index\NoMergeScheduler.cs" />
+    <Compile Include="Index\NormsConsumer.cs" />
+    <Compile Include="Index\NormsConsumerPerField.cs" />
     <Compile Include="Index\NumericDocValues.cs" />
     <Compile Include="Index\NumericDocValuesWriter.cs" />
     <Compile Include="Index\OrdTermState.cs" />
