Port: Similarities.Distribution classes

--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -567,6 +567,9 @@
     <Compile Include="Search\Similarities\BM25Similarity.cs" />
     <Compile Include="Search\Similarities\DefaultSimilarity.cs" />
     <Compile Include="Search\Similarities\DFRSimilarity.cs" />
+    <Compile Include="Search\Similarities\Distribution.cs" />
+    <Compile Include="Search\Similarities\DistributionLL.cs" />
+    <Compile Include="Search\Similarities\DistributionSPL.cs" />
     <Compile Include="Search\Similarities\Similarity.cs" />
     <Compile Include="Search\Similarities\SimilarityBase.cs" />
     <Compile Include="Search\SloppyPhraseScorer.cs">
