Port: Similarities.IBSimilarity

--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -570,6 +570,7 @@
     <Compile Include="Search\Similarities\Distribution.cs" />
     <Compile Include="Search\Similarities\DistributionLL.cs" />
     <Compile Include="Search\Similarities\DistributionSPL.cs" />
+    <Compile Include="Search\Similarities\IBSimilarity.cs" />
     <Compile Include="Search\Similarities\Similarity.cs" />
     <Compile Include="Search\Similarities\SimilarityBase.cs" />
     <Compile Include="Search\SloppyPhraseScorer.cs">
