Port: Similarities.Lambda classes

--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -571,6 +571,9 @@
     <Compile Include="Search\Similarities\DistributionLL.cs" />
     <Compile Include="Search\Similarities\DistributionSPL.cs" />
     <Compile Include="Search\Similarities\IBSimilarity.cs" />
+    <Compile Include="Search\Similarities\Lambda.cs" />
+    <Compile Include="Search\Similarities\LambdaDF.cs" />
+    <Compile Include="Search\Similarities\LambdaTTF.cs" />
     <Compile Include="Search\Similarities\Similarity.cs" />
     <Compile Include="Search\Similarities\SimilarityBase.cs" />
     <Compile Include="Search\SloppyPhraseScorer.cs">
