--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -199,6 +199,15 @@
     <Compile Include="Codecs\FieldsProducer.cs" />
     <Compile Include="Codecs\FilterCodec.cs" />
     <Compile Include="Codecs\LiveDocsFormat.cs" />
+    <Compile Include="Codecs\Lucene3x\Lucene3xCodec.cs" />
+    <Compile Include="Codecs\Lucene3x\Lucene3xFieldInfosFormat.cs" />
+    <Compile Include="Codecs\Lucene3x\Lucene3xFieldInfosReader.cs" />
+    <Compile Include="Codecs\Lucene3x\Lucene3xFields.cs" />
+    <Compile Include="Codecs\Lucene3x\SegmentTermDocs.cs" />
+    <Compile Include="Codecs\Lucene3x\SegmentTermEnum.cs" />
+    <Compile Include="Codecs\Lucene3x\TermInfo.cs" />
+    <Compile Include="Codecs\Lucene3x\TermInfosReader.cs" />
+    <Compile Include="Codecs\Lucene3x\TermInfosReaderIndex.cs" />
     <Compile Include="Codecs\MappingMultiDocsAndPositionsEnum.cs" />
     <Compile Include="Codecs\MappingMultiDocsEnum.cs" />
     <Compile Include="Codecs\MultiLevelSkipListReader.cs" />
