Port: Finish Lucene40 codecs

--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -226,9 +226,21 @@
     <Compile Include="Codecs\Lucene40\Lucene40DocValuesReader.cs" />
     <Compile Include="Codecs\Lucene40\Lucene40FieldInfosFormat.cs" />
     <Compile Include="Codecs\Lucene40\Lucene40FieldInfosReader.cs" />
+    <Compile Include="Codecs\Lucene40\Lucene40LiveDocsFormat.cs" />
+    <Compile Include="Codecs\Lucene40\Lucene40NormsFormat.cs" />
+    <Compile Include="Codecs\Lucene40\Lucene40PostingsBaseFormat.cs" />
     <Compile Include="Codecs\Lucene40\Lucene40PostingsFormat.cs" />
     <Compile Include="Codecs\Lucene40\Lucene40PostingsReader.cs" />
+    <Compile Include="Codecs\Lucene40\Lucene40SegmentInfoFormat.cs" />
+    <Compile Include="Codecs\Lucene40\Lucene40SegmentInfoReader.cs" />
+    <Compile Include="Codecs\Lucene40\Lucene40SegmentInfoWriter.cs" />
     <Compile Include="Codecs\Lucene40\Lucene40SkipListReader.cs" />
+    <Compile Include="Codecs\Lucene40\Lucene40StoredFieldsFormat.cs" />
+    <Compile Include="Codecs\Lucene40\Lucene40StoredFieldsReader.cs" />
+    <Compile Include="Codecs\Lucene40\Lucene40StoredFieldsWriter.cs" />
+    <Compile Include="Codecs\Lucene40\Lucene40TermVectorsFormat.cs" />
+    <Compile Include="Codecs\Lucene40\Lucene40TermVectorsReader.cs" />
+    <Compile Include="Codecs\Lucene40\Lucene40TermVectorsWriter.cs" />
     <Compile Include="Codecs\MappingMultiDocsAndPositionsEnum.cs" />
     <Compile Include="Codecs\MappingMultiDocsEnum.cs" />
     <Compile Include="Codecs\MultiLevelSkipListReader.cs" />
